@startuml

title logset as graph

package vocab <<rectangle>> {
  class LogSet <dcat:Dataset> {
    dct:temporal
  }
  class LogSeries
  class LogFormatType
  class DataSource
  class File
  File -u-|> DataSource
  LogSeries --> LogFormatType : logFormat
  DataSource -r-> LogSeries : isLogOf
  LogSet --> DataSource : hasLogData 
  LogSet --> DataSource : hasAnnotations 
}

package dict <<rectangle>> {
  class RegEx <rdfs:Literal>
  object "timeStampedLog:LogFormatType" as timeStampedLogFile
  timeStampedLogFile .u.> LogFormatType : is a
  object "filePerTimepoint:LogFormatType" as filePerTimepoint
  filePerTimepoint .u.> LogFormatType : is a 
  object console_log {
    filePattern: name_date
    seriesPattern: "console"
  }
  object consumer_log {
    filePattern: name_date
    seriesPattern: "console"
  }
  console_log .u.> LogSeries : is a 
  consumer_log .u.> LogSeries : is a 
  console_log -u-> timeStampedLog : logFormat
  consumer_log -u-> timeStampedLog : logFormat
}

object sample_data {
  dct:description "a partial sample of cori log data for testing logset tools"
}
sample_data .u.> LogSet : is a 

object "console-20170906" as console06
object "console-20170907" as console07
object "consumer-20170906" as consumer06
object "consumer-20170907" as consumer07

console06 ..> File : is a 

sample_data -u-> console06 : hasLogData
sample_data -u-> console07 : hasLogData
sample_data -u-> consumer06 : hasLogData
sample_data -u-> consumer07 : hasLogData

console06 -u-> console_log : isLogOf
console07 -u-> console_log : isLogOf
consumer06 -u-> consumer_log : isLogOf
consumer07 -u-> consumer_log : isLogOf






@enduml
